[gd_scene load_steps=4 format=3 uid="uid://cq2kn0806dpmu"]

[ext_resource type="Script" uid="uid://cxwi83pqvt4fk" path="res://Scripts/minispiel.gd" id="1_k10lx"]
[ext_resource type="Texture2D" uid="uid://dey5u0abogkd" path="res://Assets/Caesar_außen.png" id="2_drk55"]
[ext_resource type="Texture2D" uid="uid://vx7bwsjh032j" path="res://Assets/Cäsar_innen.png" id="3_16kq3"]

[node name="Minispiel" type="Node2D"]
script = ExtResource("1_k10lx")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 40.0

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Cäsar_außen" type="Sprite2D" parent="."]
position = Vector2(-300, 0)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_drk55")

[node name="Drehen" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(-300, 2)

[node name="Cäsar_innen" type="Sprite2D" parent="Drehen"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_16kq3")

[node name="Area2D" type="Area2D" parent="Drehen"]
unique_name_in_owner = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Drehen/Area2D"]
unique_name_in_owner = true
polygon = PackedVector2Array(-16, -128, -13, -106, -1, -107, 12, -106, 15, -128, -1, -129)

[node name="links" type="Button" parent="."]
offset_left = -547.0
offset_top = 140.0
offset_right = -421.0
offset_bottom = 198.0
text = "Links drehen"

[node name="rechts" type="Button" parent="."]
offset_left = -191.0
offset_top = 140.0
offset_right = -65.0
offset_bottom = 198.0
text = "Rechts drehen"

[node name="VerschlüsselterText" type="Label" parent="."]
unique_name_in_owner = true
offset_top = -56.0
offset_right = 466.0
offset_bottom = -22.0
theme_type_variation = &"HeaderMedium"

[node name="CheckSolution" type="Button" parent="."]
offset_left = 136.0
offset_top = 99.0
offset_right = 299.0
offset_bottom = 153.0
text = "Check Solution"

[connection signal="pressed" from="links" to="." method="_on_links_pressed"]
[connection signal="pressed" from="rechts" to="." method="_on_rechts_pressed"]
[connection signal="pressed" from="CheckSolution" to="." method="_on_check_solution_pressed"]
